fixing sales names

--- a/packages/wisptools:free-router/client/form.html
+++ b/packages/wisptools:free-router/client/form.html
@@ -193,8 +193,9 @@
             <div class="col-md-6">
               <select class="form-control" name="sales_rep">
                 <option value="Unknown">I Don't Know</option>
-                <option value="Bill">Bill</option>
-                <option value="Rodger">Rodger</option>
+                <option value="Bill Pedersen">Bill Pedersen</option>
+                <option value="Dan Ortega">Dan Ortega</option>
+                <option value="Roger Moore">Roger Moore</option>
               </select>
             </div>
           </div>
