--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -16,60 +16,62 @@
         <div class="table-responsive">
         <table class="table table-striped routerTable">
           <thead>
-            <tr><th>Customer</th><th>Serial Number</th><th>MAC</th><th>Make</th><th>Model</th><th>Manage</th></tr>
+            <tr><th>Customer</th><th>Serial Number</th><th>MAC</th><th>Make</th><th>Model</th><th>Online</th><th>Manage</th></tr>
           </thead>
           <tbody>
             {{#each routers}}
+              <tr style="height: 55px;">
               {{#if restoreRouter}}
-                <tr style="height: 55px;">
-                  <td class="routerName" >
-                    <strike>{{name}}</strike>
-                  </td>
-                  <td class="routerSerial">
-                    <strike>{{serial}}</strike>
-                  </td>
-                  <td class="routerMac">
-                    <strike>{{mac}}</strike>
-                  </td>
-                  <td><strike>{{make}}</strike></td>
-                  <td><strike>{{model}}</strike></td>
-                  <td>
-                    <a href="#" class="restoreRouter btn btn-warning btn-xs pull-right">
-                      <i class="fa fa-undo"></i>  
-                    </a>
-                  </td>
-                </tr>
+                <td class="routerName" >
+                  <strike>{{name}}</strike>
+                </td>
+                <td class="routerSerial">
+                  <strike>{{serial}}</strike>
+                </td>
+                <td class="routerMac">
+                  <strike>{{mac}}</strike>
+                </td>
+                <td><strike>{{make}}</strike></td>
+                <td><strike>{{model}}</strike></td>
+                <td></td>
+                <td>
+                  <a href="#" class="restoreRouter btn btn-warning btn-xs pull-right">
+                    <i class="fa fa-undo"></i>  
+                  </a>
+                </td>
               {{else}}
-                <tr style="height: 55px;">
-                  <td class="routerName editable" style="min-width:225px;">
-                    {{#if editingName}}
-                      <input class="form-control" type="text" id="editName" value="{{name}}">
-                    {{else}}
-                      {{name}}
-                      {{> wtEditableIcon}}
-                    {{/if}}
-                  </td>
-                  <td class="routerSerial">
-                    {{serial}}
-                  </td>
-                  <td class="routerMac editable">
-                    {{#if editingMac}}
-                      <input class="form-control input-xs" type="text" id="editMac" value="{{mac}}">
-                    {{else}}
-                      {{mac}}
-                      {{> wtEditableIcon}}
-                    {{/if}}
-                  </td>
-                  <td>{{make}}</td>
-                  <td>{{model}}</td>
-                  <td>
-                    <a class="btn btn-default btn-sm addtomodal" href="{{url}}" target="_blank">View Router</a>
-                    <a href="#" class="removeRouter btn btn-default btn-xs pull-right" id="removeBtn{{id}}" data-toggle="modal" data-target="#myModal" >
-                      <i class="fa fa-times"></i>  
-                    </a>
-                  </td>
-                </tr>
+                <td class="routerName editable" style="min-width:225px;">
+                  {{#if editingName}}
+                    <input class="form-control" type="text" id="editName" value="{{name}}">
+                  {{else}}
+                    {{name}}
+                    {{> wtEditableIcon}}
+                  {{/if}}
+                </td>
+                <td class="routerSerial">
+                  {{serial}}
+                </td>
+                <td class="routerMac editable">
+                  {{#if editingMac}}
+                    <input class="form-control input-xs" type="text" id="editMac" value="{{mac}}">
+                  {{else}}
+                    {{mac}}
+                    {{> wtEditableIcon}}
+                  {{/if}}
+                </td>
+                <td>{{make}}</td>
+                <td>{{model}}</td>
+                <td>
+                  {{> wtManagedRouterIsOnline id=id}}
+                </td>
+                <td>
+                  <a class="btn btn-default btn-sm addtomodal" href="{{url}}" target="_blank">View Router</a>
+                  <a href="#" class="removeRouter btn btn-default btn-xs pull-right" id="removeBtn{{id}}" data-toggle="modal" data-target="#myModal" >
+                    <i class="fa fa-times"></i>  
+                  </a>
+                </td>
               {{/if}}
+              </tr>
             {{/each}}
             <tr>
               <td>
@@ -94,6 +96,18 @@
     </div>
   </div>
   {{> wtManagedRouterDeleteModal}}
+</template>
+
+<template name='wtManagedRouterIsOnline'>
+  {{#if doneChecking}}
+    {{#if isOnline}}
+      <button type="button" class="btn btn-success btn-xs"><i class="fa fa-check"></i></button>
+    {{else}}
+      <button type="button" class="btn btn-danger btn-xs"><i class="fa fa-times"></i></button>
+    {{/if}}
+  {{else}}
+    <button type="button" class="btn btn-default btn-xs"><i class="fa fa-refresh fa-spin"></i></button>
+  {{/if}}
 </template>
 
 <template name='wtManagedRouterDeleteModal'>
