matching online colors to recent check in buttons

--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -102,9 +102,9 @@
 <template name='wtManagedRouterIsOnline'>
   {{#if doneChecking}}
     {{#if isOnline}}
-      <i class="fa fa-2x fa-check text-success"></i>
+      <i class="fa fa-2x fa-check" style="color: #5cb85c;"></i>
     {{else}}
-      <i class="fa fa-2x fa-circle text-danger"></i>
+      <i class="fa fa-2x fa-circle" style="color: #d9534f;"></i>
     {{/if}}
   {{else}}
     <i class="fa fa-2x fa-refresh fa-spin"></i>
