--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -90,6 +90,15 @@
                 <button type="submit" class="btn btn-default">Add</button>
               </td>
             </tr>
+            {{#if hasMore}}
+            <tr>
+              {{#if showSpinner}}
+              <td colspan="7" style="text-align:center;position: relative;">{{> spinner}}</td>
+              {{else}}
+              <td colspan="7" style="text-align:center; cursor: pointer;" id="showMoreBtn">Show more</td>
+              {{/if}}
+            </tr>
+            {{/if}}
           </tbody>
         </table>
       </div>
