updating free router list

--- a/packages/wisptools:free-router/client/form.html
+++ b/packages/wisptools:free-router/client/form.html
@@ -200,14 +200,13 @@
                 <label for="preferred_router" class="col-md-3 control-label">Preferred Router</label>
                 <div class="col-md-4">
                   <select class="form-control" name="preferred_router">
+                    <option value="AC1000M">AC1000M</option>
+                    <option value="AC1000MS">AC1000MS</option>
                     <option value="AC1200M">AC1200M</option>
                     <option value="AC1200MS">AC1200MS</option>
-                    <option value="WRT500">WRT500</option>
-                    <option value="WRT510">WRT510</option>
-                    <option value="WRT300N-DX">WRT300N-DX</option>
-                    <option value="WRT300N-D6">WRT300N-D6</option>
+                    <option value="QX300">QX300</option>
                     <option value="LTE520">LTE520</option>
-                    <option value="LTE420">LTE420</option>
+                    <option value="WRT300N-DX">WRT300N-DX</option>
                   </select>
                 </div>
               </div>
