Display device count

--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -101,6 +101,9 @@
                 {{/if}}
               </tr>
             {{/if}}
+            <tr>
+              <td colspan="7" style="text-align:left;">Showing {{displayCount}} out of {{totalCount}} devices</td>
+            </tr>
           </tbody>
         </table>
       </div>
