--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -92,6 +92,9 @@
               {{/if}}
               </tr>
             {{/each}}
+            <tr>
+              <td colspan="7" style="text-align:center;">Showing {{displayCount}} out of {{totalCount}} devices</td>
+            </tr>
             {{#if hasMore}}
               <tr>
                 {{#if showSpinner}}
@@ -101,9 +104,6 @@
                 {{/if}}
               </tr>
             {{/if}}
-            <tr>
-              <td colspan="7" style="text-align:left;">Showing {{displayCount}} out of {{totalCount}} devices</td>
-            </tr>
           </tbody>
         </table>
       </div>
