removing spinner and limiting results to eight

--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -136,7 +136,7 @@
       <i class="fa fa-circle" style="color: #d9534f;"></i>
     {{/if}}
   {{else}}
-    <i class="fa fa-refresh fa-spin"></i>
+    <i class="fa fa-ellipsis-h"></i>
   {{/if}}
 </template>
 
